name:           symbol-int
version:        0.1.1.4
cabal-version:  >= 1.6
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2006-2010 Harvard University
author:         Geoffrey Mainland <mainland@eecs.harvard.edu>
maintainer:     mainland@eecs.harvard.edu
stability:      alpha
homepage:       http://www.eecs.harvard.edu/~mainland/
category:       Data
synopsis:       A 'Symbol' type for fast symbol comparison.
description:    Provides a 'Symbol' data type allowing fast symbol comparisons
                and functions for interning symbols and recovering their
                'String' representation.

build-type:     Simple

library
  exposed-modules:
    Data.Symbol

  build-depends:
--    base >= 4 && < 5,
    base,
--    bimap >= 0.2.4,
    bimap,
--    containers >= 0.2 && < 0.5,
    containers,
    deepseq,
--    syb >= 0.1 && < 0.4
    syb

source-repository head
  type:     git
  location: git://github.com/mainland/symbol.git
